tree-sitter-puddlejumper/test/corpus/block.txt
==================
Block
==================
# hello
foo

@a:
# hello
foo


@b:
# hello
---
(document 
    (block (block_header (node (content)))
    (node (content)))

    (block (binding (identifier)) 
    (block_header (node (content)))
    (node (content)))

    (block (binding (identifier))
    (block_header (node (content)))))
