tree-sitter-puddlejumper/test/corpus/block_then_inline.txt
==================
Block binding, then inline binding
==================
@:
# xxx
    yyy
@: zzz

@:
# aaa
    bbb
@:
# foo
---
(document
    (block (binding)
    (block_header (node (content)
        (children
            (node
            (content)))))
    (node (binding) (content)))

    (block (binding)
    (block_header (node (content)
        (children
            (node
            (content))))))
    (block (binding)
    (block_header (node (content)))))
